fixed: vertical alignment

--- a/src/assetbundles/src/css/Translations.css
+++ b/src/assetbundles/src/css/Translations.css
@@ -1056,6 +1056,7 @@ td.target{
 
 #settings .input.ltr:not(.value) {
     display: block;
+    align-self: center;
 }
 
 #settings .field.button {
